--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,24 @@
 .chat-bubble {
   border-style: solid;
   border-radius: 50%;
-  padding: 100em;
+  padding: 100em; 
+}
+
+
+.side-nav {
+  height: 100%;
+  float: left;
+  text-align: left;
+}
+
+.chat-submit {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-color: aliceblue;
 }
 
 .my-message {
   text-align: right;
+  background-color: purple;
 }
