--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
   color: #61dafb;
 }
 
+.top-nav {
+  position: fixed;
+  width: 100%;
+}
+
 .bubble-color1 {
   border-color: #61dafb;
   border-style: solid;
@@ -36,18 +41,63 @@
 }
 
 .chat-submit {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   background-color: aliceblue;
+
 }
 
+/* overall group of meesages */
+#chat-group {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+/* general message */
+.message {
+  min-width: 30%;
+}
+
+.message p {
+  margin-bottom: 0px;
+}
+
+.time-stamp {
+  padding: 0px;
+  font-size: .6em;
+}
+
+.user-name {
+  padding-left: 5px;
+}
+
+/* user submitted messages */
 .my-message {
   text-align: right;
-  background-color: purple;
-  padding-right: 5%;
 }
 
+div.my-message span.user-name {
+  color: blue;
+}
+
+/* message from other users */
 .auto-message {
   text-align: left;
+}
+
+div.auto-message span.user-name {
+  color: purple;
+}
+div.ai span.user-name {
+  color: red;
+}
+
+/* chat group position holders */
+#last-div {
+  padding-bottom: 10%;
+}
+
+#first-div {
+  padding-top: 60%;
 }
